--- a/Portfolio/src/main/webapp/portfolio/css/style.css
+++ b/Portfolio/src/main/webapp/portfolio/css/style.css
@@ -30,13 +30,13 @@ header {
    z-index: 100;
 }
 .innerHeader {
-   height: 100px;
-   padding: 0 50px;
+   height: 110px;
+   padding: 15px 80px;
    transition: all 0.3s;
 }
 .innerHeader .logo {
-   width: 300px;
-   height: 70px;
+   width: 400px;
+   height: 80px;
    float: left;
    margin-top: 20px;
    transition: all 0.3s;
@@ -55,10 +55,39 @@ header {
    transition: all 0.3s;
 }
 .innerHeader .logo a img:nth-child(2) {
-   width: 80%;
-   top: 5%;
-   left: 10%;
-   opacity: 0;
+   width: 60%;
+   top: 13%;
+   left: 20%;
+   /* opacity: 0; */
 }
 
-/* gnb */
+/* menu */
+.menu {
+   position: absolute;
+   left: 55%;
+   /* transform: translateX(-50%); */
+   width: 900px;
+}
+.menu >li {
+   float: left;
+   height: 90px;
+   line-height: 90px;
+   position: relative;
+   transition: all 0.3s;
+   margin-right: 6%;
+}
+.menu >li >a {
+   display: block;
+   width: 100%;
+   height: 100%;
+   text-align: center;
+   color: #fff;
+   font-size: 30px;
+   font-weight: 700;
+   transition: all 0.5s;
+}
+.menu >li:hover >a,
+.menu >li >a:focus {
+   color: #1abc9c;
+   transition: all 0.5s;
+}
