--- a/Portfolio/src/main/webapp/portfolio/css/style.css
+++ b/Portfolio/src/main/webapp/portfolio/css/style.css
@@ -29,11 +29,12 @@ header {
    width: 100%;
    position: fixed;
    z-index: 100;
+   transition: all 0.3s;
 }
 header .innerHeader {
    height: 110px;
-   padding: 15px 80px;
-   transition: all 0.3s;
+   padding: 0 80px;
+   transition: all 0.5s;
 }
 .innerHeader .logo {
    width: 400px;
@@ -56,33 +57,31 @@ header .innerHeader {
    transition: all 0.3s;
 }
 .innerHeader .logo a img:nth-child(2) {
+   transition: all 0.3s;
    width: 60%;
    top: 13%;
    left: 20%;
-   opacity: 0;
 }
 
 /* fixHeader */
 header.on .innerHeader {
-   height: 60px;
-   transition: all 0.4s;
+   height: 80px;
+   transition: all 0.3s;
+   background: #dbdbdb;
 }
-header.on .innerHeader .gnb > li {
-   height: 60px;
-   line-height: 60px;
-   transition: all 0.4s;
+header.on .innerHeader .menu > li {
+   height: 80px;
+   line-height: 80px;
+   transition: all 0.3s;
 }
 header.on .innerHeader .logo {
-   transition: all 0.4s;
-   margin-top: 13px;
-}
-header.on .innerHeader .logo a img:nth-child(1){
-   opacity: 0;
+   transition: all 0.3s;
+   margin-top: 10px;
 }
 header.on .innerHeader .logo a img:nth-child(2){
-   opacity: 1;
+   opacity: 0;
 }
-header.on .gnb ul.inner.on {
+header.on .menu ul.inner.on {
    top:60px;
 }
 
@@ -109,10 +108,10 @@ header.on .gnb ul.inner.on {
    color: #fff;
    font-size: 30px;
    font-weight: 700;
-   transition: all 0.5s;
+   transition: all 0.3s;
 }
 .menu >li:hover >a,
 .menu >li >a:focus {
    color: #1abc9c;
-   transition: all 0.5s;
+   transition: all 0.3s;
 }
