--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,18 @@ header.on .menu ul.inner.on {
    text-transform: uppercase;
    transition: all 0.3s;
 }
+/* .main .slide li .txt:before {
+   z-index: -1;
+   content: '';
+   position: absolute;
+   left: -25%;
+   top: 15%;
+   width: 128%;
+   height: 35vh;
+   background: #ff9ed3;
+} */
 .main .slide li .txt h2 {
+   /* color: #000; */
    font-weight: 500;
    font-size: 15vh;
    margin: 5px 0;
@@ -259,6 +270,9 @@ header.on .menu ul.inner.on {
 }
 
 /* section */
+section >a {
+   transition: all 3s;
+}
 section .title {
    padding-top: 80px;
    color: #000;
@@ -267,7 +281,7 @@ section .title {
 section .title h2 {
    /* font-family: 'Nanum Pen Script', cursive; */
    font-size: 50px;
-   margin: 30px auto;
+   margin: 5px auto;
    /* margin-bottom: 5px; */
    font-weight: 700;
 }
@@ -351,7 +365,7 @@ section.project {
    box-sizing: border-box;
 }
 .project ul li a .content p {
-   font-size: 25px;
+   font-size: 2.5vh;
    font-weight: 700;
 }
 .project ul li a .content p.color {
@@ -361,13 +375,13 @@ section.project {
 }
 .project ul li a .content p.date {
    color: #999;
-   font-size: 15px;
+   font-size: 1.7vh;
    font-weight: normal;
    padding-left: 5px;
    position: relative;
    margin-top: 30px;
 }
 .project ul li a .content p.date span {
-   font-size: 20px;
+   font-size: 1.9vh;
    margin-right: 2%;
 }
