--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,15 @@ header.on .menu ul.inner.on {
    width: 101%;
    height: auto;
 }
+.main .slide li #hello {
+   position: absolute;
+   width: 15%;
+   height: 12%;
+   left: 61%;
+   top: 70%;
+   z-index: 20;
+   cursor: pointer;
+}
 .main .slide li .txt {
    position: absolute;
    left: 9%;
@@ -158,16 +167,16 @@ header.on .menu ul.inner.on {
    margin-bottom: 5px;
 }
 .main .slide li .txt h2 {
-   font-weight: 500;
+   /* font-weight: 500;
    font-size: 14vh;
-   font-family: 'Nanum Pen Script', cursive;
-   /* font-weight: 700; */
-   /* font-size: 8vh; */
+   font-family: 'Nanum Pen Script', cursive; */
+   font-weight: 700;
+   font-size: 8vh;
    letter-spacing: 5%;
 }
 .main .slide li .txt h2 span {
-   font-size: 18vh;
-   /* font-size: 10vh; */
+   /* font-size: 18vh; */
+   font-size: 9vh;
    color: #ff5492;
    /* color: #1abc9c; */
 }
@@ -269,9 +278,9 @@ header.on .menu ul.inner.on {
    animation-duration: 1s;
 }
 @keyframes txt4 {
-   0% {font-size: 14vh; }
-   20% {font-size: 14vh;}
-   100% {font-size: 18vh; }
+   0% { font-size: 8vh; }
+   20% { font-size: 8vh; }
+   100% { font-size: 9vh; }
 }
 .slick-active img {
    animation-name: img;
