Update img size

--- a/css/style.css
+++ b/css/style.css
@@ -121,31 +121,22 @@ header.on .menu ul.inner.on {
    width: 100%;
    height: 98vh;
    position: relative;
-   background: #febadf;
+   background: #ffbbe0;
 }
 .main .slide li:nth-child(2){
    background: #ffc6e6;
 }
 .main .slide li img {
    position: absolute;
-   left: -1%;
-   bottom: 0;
-   width: 101%;
+   right: 7%;
+   bottom: 3%;
+   width: 50%;
    height: auto;
-}
-.main .slide li #hello {
-   position: absolute;
-   width: 15%;
-   height: 12%;
-   left: 61%;
-   top: 70%;
-   z-index: 20;
-   cursor: pointer;
 }
 .main .slide li .txt {
    position: absolute;
-   left: 9%;
-   top: 55%;
+   left: 11%;
+   top: 65%;
    color: #fff;
    font-size: 3vh;
    transform: translateY(-50%);
@@ -255,7 +246,7 @@ header.on .menu ul.inner.on {
    100% {opacity: 1; transform: rotateX(0deg) translateY(0px);}
 }
 
-.slick-active .txt a {
+/* .slick-active .txt a {
    animation-name: txt2;
    animation-duration: 0.8s;
 }
@@ -263,14 +254,14 @@ header.on .menu ul.inner.on {
    0% {opacity: 0; transform: rotateX(180deg) translateY(+150px);}
    20% {opacity: 0; transform: rotateX(180deg) translateY(+150px);}
    100% {opacity: 1; transform: rotateX(0deg) translateY(0px);}
-}
+} */
 .slick-active .txt h2 {
    animation-name: txt3;
    animation-duration: 0.8s;
 }
 @keyframes txt3 {
    0% {transform: translateX(0); }
-   20% {transform:translateX(-50px);}
+   20% {transform:translateX(+50px);}
    100% {transform: translateX(0); }
 }
 .slick-active .txt h2 span {
@@ -287,10 +278,18 @@ header.on .menu ul.inner.on {
    animation-duration: 2s;
 }
 @keyframes img {
-   0% {opacity: 0; transform: translateX(150px);}
-   20% {opacity: 0; transform: translateX(150px);}
+   0% {opacity: 0; transform: translateX(-150px);}
+   20% {opacity: 0; transform: translateX(-150px);}
    100% {opacity: 1; transform: translateX(0px);}
 }
+/* .slick-active img#scroll {
+   animation: scroll linear 0.8s 1.8s infinite;
+}
+@keyframes scroll {
+   0% { opacity: 1; transform: translateY(0px); }
+   50% { opacity: 1; transform: translateY(-7px); }
+   100% { opacity: 1; transform: translateY(0px); }
+} */
 
 /* section */
 section >a {
