--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ header.on .menu ul.inner.on {
 }
 @keyframes txt3 {
    0% {transform: translateX(0); }
-   20% {transform:translateX(+50px);}
+   20% {transform:translateX(-50px);}
    100% {transform: translateX(0); }
 }
 .slick-active .txt h2 span {
@@ -307,25 +307,31 @@ header.on .menu ul.inner.on {
 }
 @keyframes scroll {
    0% { opacity: 1; transform: translateY(0px); }
-   50% { opacity: 1; transform: translateY(7px); }
+   50% { opacity: 1; transform: translateY(-10px); }
    100% { opacity: 1; transform: translateY(0px); }
 }
 
 /* section */
-section {
-   /* height: 90vh; */
-}
 section .title {
+   position: relative;
    width: 1200px;
    padding-top: 80px;
    margin: 3% auto;
-   color: #000;
-   text-align: center;
+   color: #181818;
 }
+/* section .title:after {
+   content: '';
+   position: absolute;
+   left: 30px;
+   bottom: 10px;
+   width: 6px;
+   height: 45px;
+   background: #1abc9c;
+} */
 section .title h2 {
    /* font-family: 'Nanum Pen Script', cursive; */
-   font-size: 50px;
-   margin: 30px auto;
+   font-size: 40px;
+   margin: 30px 55px;
    /* margin-bottom: 5px; */
    font-weight: 700;
 }
@@ -337,10 +343,109 @@ section .title p {
    font-size: 18px;
 }
 
+/* skills */ 
+.skill .title {
+   left: 700px;
+}
+.skill ul {
+   width: 1200px;
+   margin: 5% auto;
+   overflow: hidden;
+}
+.skill li {
+   width: 900px;
+   margin: 20px 200px;
+   font-size: 21px;
+   position: relative;
+}
+.skill li h3 {
+   margin-bottom: 21px;
+   font-size: 23px;
+}
+.skill li:before {
+   position: absolute;
+   content: '';
+   width: 100%;
+   height: 10px;
+   top: 38px;
+   border-radius: 62px;
+   background: #dbdbdb;
+}
+.skill li:after {
+   animation: levelLine linear 1s 0s;
+   position: absolute;
+   content: '';
+   height: 10px;
+   top: 38px;
+   border-radius: 62px;
+   background: #1abc9c;
+}
+.skill li#java:after {
+   width: 80%;
+}
+.skill li#sql:after {
+   width: 60%;
+}
+.skill li#html:after {
+   width: 70%;
+}
+.skill li#css:after {
+   width: 50%;
+}
+.skill li#javaScript:after {
+   width: 40%;
+}
+.skill li#github:after {
+   width: 50%;
+}
+@keyframes levelLine {
+   0% { width: 0%;}
+}
+.skill li div:after {
+   position: absolute;
+   content: '';
+   width: 25px;
+   height: 25px;
+   line-height: 25px;
+   top: 29px;
+   border-radius: 50%;
+   background: #1abc9c;
+   color: #fff;
+   font-size: 13px;
+   z-index: 1;
+   animation: levelNumber linear 1s 0s;
+}
+.skill li#java div:after {
+   content: '80%';
+   left: 79%;
+}
+.skill li#sql div:after {
+   content: '60%';
+   left: 59%;
+}
+.skill li#html div:after {
+   content: '70%';
+   left: 69%;
+}
+.skill li#css div:after {
+   content: '50%';
+   left: 49%;
+}
+.skill li#javaScript div:after {
+   content: '40%';
+   left: 39%;
+}
+.skill li#github div:after {
+   content: '50%';
+   left: 49%;
+}
+@keyframes levelNumber {
+   0% { left: 1%;}
+}
 /* project */
 section.project {
    /* margin-bottom: 150px; */
-   margin: 5% auto;
+   /* margin: 5% auto; */
 }
 .project ul {
    width: 1200px;
