--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@400;500;700&family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:ital,wght@0,700;1,700&family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@400;500;700&family=Rubik&display=swap');
 
 
 /* reset */
@@ -13,6 +13,7 @@ a:hover { text-decoration: none; color: inherit; }
 
 body {
    font-family: 'Noto Sans KR', sans-serif;
+   /* font-family: 'Nanum Pen Script', cursive; */
    font-size: 14px;
 }
 .wrap {
@@ -20,8 +21,10 @@ body {
    overflow: hidden;
 }
 .en {
-   font-family: 'Bebas Neue', cursive;
-   letter-spacing: 3px;
+   font-family: 'Josefin Sans', sans-serif;
+   /* font-family: 'Bebas Neue', cursive; */
+   /* letter-spacing: 4px; */
+   font-weight: 700;
 }
 
 /* header */
@@ -316,8 +319,11 @@ section .title {
    position: relative;
    width: 1200px;
    padding-top: 80px;
-   margin: 3% auto;
+   margin: 2% auto;
    color: #181818;
+   font-family: 'Josefin Sans', sans-serif;
+   font-weight: 700;
+   font-style: italic;
 }
 /* section .title:after {
    content: '';
@@ -346,6 +352,21 @@ section .title p {
 /* skills */ 
 .skill .title {
    left: 700px;
+}
+.skill {
+   position: relative;
+}
+.skill ul:before {
+   content: '';
+   position: absolute;
+   left: 0;
+   top: 130px;
+   width: 100%;
+   height: 1000px;
+   z-index: -1;
+   background: #ffbbe0;
+   /* background: #1abc9c; */
+   opacity: 0.3;
 }
 .skill ul {
    width: 1200px;
@@ -443,7 +464,8 @@ section .title p {
    0% { left: 1%;}
 }
 /* project */
-section.project {
+section.project .title {
+   left: 50px;
    /* margin-bottom: 150px; */
    /* margin: 5% auto; */
 }
@@ -499,6 +521,7 @@ section.project {
    transition: all 0.6s;
 }
 .project ul li a p.img:after {
+   font-family: 'Josefin Sans', sans-serif;
    content: 'VIEW';
    position: absolute;
    left: 50%;
