--- a/css/style.css
+++ b/css/style.css
@@ -701,15 +701,20 @@ section.contact .title {
    content: '';
    position: absolute;
    top: 0px;
-   width: 300px;
-   height: 300px;
+   width: 280px;
+   height: 280px;
    z-index: -1;
    background: #ff5493;
-   transform: translateX(470px) translateY(120px);
+   transform: translateX(470px) translateY(130px);
    /* background: #1abc9c; */
    opacity: 0.5;
    border-radius: 50%;
+   /* transition: all 1s; */
 }
+/* .contact ul:hover:after {
+   opacity: 0.7;
+   transition: all 1s;
+} */
 .contact ul {
    width: 1200px;
    margin: 1% auto;
@@ -731,7 +736,7 @@ section.contact .title {
 }
 .contact ul li span {
    float: left;
-   margin-right: 25px;
+   margin-right: 15px;
    width: 32px;
    font-size: 38px;
    font-weight: 700;
@@ -739,11 +744,14 @@ section.contact .title {
    transform: translateY(-2px);
    transition: all 0.3s;
 }
+.contact ul li:first-child {
+   letter-spacing: 2px;
+}
 .contact ul li:hover span{
    color: #1abc9c;
    /* color: #ff5492; */
    transition: all 0.3s;
-   animation: pitapat 0.5s infinite;
+   /* animation: pitapat 0.5s infinite; */
 }
 @keyframes pitapat {
    0% { transform: translateY(0px); }
@@ -758,6 +766,7 @@ footer {
 }
 footer .innerFooter {
    background: #dbdbdb;
+   /* background: #ffbbe071; */
    color: #fff;
    padding: 30px 80px;
    transition: all 0.5s;
